--- a/CA2/CA2.csproj
+++ b/CA2/CA2.csproj
@@ -94,5 +94,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\staroutline.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\starsolid.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
